US 415: APIs refactorizadas con problema en imagenes
